--- a/limbtips/templates/development/virus/virus_page.html
+++ b/limbtips/templates/development/virus/virus_page.html
@@ -18,6 +18,9 @@
                 MD5 Virus Checker Tool
             </div>
             <div class="card-body">
+                <div class="alert alert-warning" role="alert">
+                    This tools uses the publically availiable Virus Hashes provided by VirusShare.com. This tool is deisgned as a proof of concept and should not be used for serious virus detection.
+                </div>
                 <form action="/development/virus/" method="GET" class="needs-validation" novalidate>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
